--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MaasISO - ISO Certificering en Implementatie Diensten</title>
+    <title>MaasISO - Informatiebeveiliging en Privacy | ISO Certificering en Implementatie Diensten</title>
     <meta name="description" content="Versterk uw bedrijf met professionele begeleiding bij ISO 9001, ISO 27001 en AVG-implementatie. Expertise in kwaliteitsmanagement en informatiebeveiliging.">
     
     <!-- Open Graph / Facebook -->
@@ -81,8 +81,8 @@
     <main id="main-content">
         <section id="hero" class="hero" aria-label="Introductie">
             <div class="container">
-                <h1>Excellentie door ISO Certificering</h1>
-                <p class="lead">Versterk uw bedrijf met professionele begeleiding bij onder andere<br>ISO 9001, ISO 27001 en AVG-implementatie</p>
+                <h1>Informatiebeveiliging en Privacy | Excellentie door ISO Certificering</h1>
+                <p class="lead">Wij helpen uw bedrijf sterker te worden. Met onze begeleiding bij<br>ISO 9001, ISO 27001 en de AVG-regels.</p>
                 <a href="contact.html" class="cta-button">Vraag een Gratis Consult Aan</a>
             </div>
         </section>
@@ -94,19 +94,19 @@
                     <div class="dienst fade-in">
                         <i class="fas fa-check-circle dienst-icon" aria-hidden="true"></i>
                         <h3>ISO 9001 Kwaliteitsmanagement</h3>
-                        <p>Optimaliseer uw bedrijfsprocessen en verhoog klanttevredenheid met onze ISO 9001 implementatie en certificeringsbegeleiding.</p>
+                        <p>Maak uw werkwijze beter en uw klanten blijer. Wij helpen u met ISO 9001 en zorgen dat u het certificaat haalt.</p>
                         <a href="iso-9001.html" class="lees-meer">Lees meer over ISO 9001 certificering</a>
                     </div>
                     <div class="dienst fade-in">
                         <i class="fas fa-shield-alt dienst-icon" aria-hidden="true"></i>
                         <h3>ISO 27001 Informatiebeveiliging</h3>
-                        <p>Bescherm uw bedrijfsinformatie en versterk het vertrouwen van uw stakeholders met onze ISO 27001 advies- en implementatiediensten.</p>
+                        <p>Houd uw bedrijfsgegevens veilig. Met ISO 27001 laten we zien dat u betrouwbaar bent. Wij helpen u hierbij.</p>
                         <a href="iso-27001.html" class="lees-meer">Lees meer over ISO 27001 certificering</a>
                     </div>
                     <div class="dienst fade-in">
                         <i class="fas fa-lock dienst-icon" aria-hidden="true"></i>
                         <h3>AVG Compliance</h3>
-                        <p>Zorg dat uw organisatie voldoet aan de Algemene Verordening Gegevensbescherming (AVG) met onze expertise in privacywetgeving en databeveiliging.</p>
+                        <p>Wij zorgen dat u aan de privacywet (AVG) voldoet. Met onze kennis van privacy en gegevensbescherming bent u veilig.</p>
                         <a href="avg-compliance.html" class="lees-meer">Lees meer over AVG compliance</a>
                     </div>
                 </div>
@@ -123,17 +123,17 @@
                     <div class="dienst fade-in">
                         <i class="fas fa-shield-alt dienst-icon" aria-hidden="true"></i>
                         <h3>Bescherm Uw Bedrijfsgegevens</h3>
-                        <p>Met onze expertise in informatiebeveiliging helpen we u bij het implementeren van effectieve beveiligingsmaatregelen om uw bedrijfskritische informatie te beschermen.</p>
+                        <p>Wij weten hoe u uw belangrijke bedrijfsgegevens het beste beschermt. We helpen u de juiste beveiliging op te zetten.</p>
                     </div>
                     <div class="dienst fade-in">
                         <i class="fas fa-user-shield dienst-icon" aria-hidden="true"></i>
                         <h3>Privacy by Design</h3>
-                        <p>We integreren privacybescherming vanaf de basis in uw bedrijfsprocessen, zodat u voldoet aan alle relevante wet- en regelgeving.</p>
+                        <p>We maken privacy een vast deel van uw werk. Zo volgt u altijd de regels op de juiste manier.</p>
                     </div>
                     <div class="dienst fade-in">
                         <i class="fas fa-lock dienst-icon" aria-hidden="true"></i>
                         <h3>Continue Bescherming</h3>
-                        <p>Onze aanpak zorgt voor een doorlopende bewaking en verbetering van uw beveiligings- en privacymaatregelen.</p>
+                        <p>We blijven uw beveiliging en privacy in de gaten houden. En we maken het steeds beter.</p>
                     </div>
                 </div>
             </div>
@@ -146,32 +146,32 @@
                     <article class="voordeel fade-in">
                         <i class="fas fa-users" aria-hidden="true"></i>
                         <h3>Expertise</h3>
-                        <p>Ons team bestaat uit professionals met jarenlange ervaring in ISO-implementaties en audits.</p>
+                        <p>Ons team heeft veel ervaring met ISO-regels. We weten precies hoe we u kunnen helpen.</p>
                     </article>
                     <article class="voordeel fade-in">
                         <i class="fas fa-cogs" aria-hidden="true"></i>
                         <h3>Maatwerk Aanpak</h3>
-                        <p>We bieden oplossingen op maat, afgestemd op de specifieke behoeften en uitdagingen van uw organisatie.</p>
+                        <p>We kijken naar wat uw bedrijf nodig heeft. Dan maken we een plan dat bij u past.</p>
                     </article>
                     <article class="voordeel fade-in">
                         <i class="fas fa-chart-line" aria-hidden="true"></i>
                         <h3>Resultaatgericht</h3>
-                        <p>Onze focus ligt op het behalen van concrete resultaten en het realiseren van meetbare verbeteringen in uw bedrijfsprocessen.</p>
+                        <p>We werken aan duidelijke doelen. U ziet meteen wat er beter gaat in uw bedrijf.</p>
                     </article>
                     <article class="voordeel fade-in">
                         <i class="fas fa-tools" aria-hidden="true"></i>
                         <h3>Praktische Benadering</h3>
-                        <p>We vertalen complexe eisen naar werkbare oplossingen die passen bij uw dagelijkse bedrijfsvoering.</p>
+                        <p>We maken moeilijke regels makkelijk te begrijpen. Zo kunt u er goed mee werken.</p>
                     </article>
                     <article class="voordeel fade-in">
                         <i class="fas fa-comments" aria-hidden="true"></i>
                         <h3>Transparantie</h3>
-                        <p>We communiceren helder en open over het hele proces, inclusief tijdlijnen, kosten en verwachtingen.</p>
+                        <p>We zijn altijd duidelijk over wat we doen. Over de tijd, de kosten en wat u kunt verwachten.</p>
                     </article>
                     <article class="voordeel fade-in">
                         <i class="fas fa-handshake" aria-hidden="true"></i>
                         <h3>Continue Ondersteuning</h3>
-                        <p>We staan u bij gedurende het hele traject, van initiële analyse tot en met de certificering en daarna.</p>
+                        <p>We helpen u van begin tot eind. Ook nadat u het certificaat heeft, blijven we u steunen.</p>
                     </article>
                 </div>
             </div>
@@ -180,7 +180,7 @@
         <section id="cta" class="section-padding" style="background-color: var(--hero-background);" aria-label="Contact Oproep">
             <div class="container text-center">
                 <h2 class="section-title" style="color: var(--text-color-light);">Klaar om uw organisatie naar een hoger niveau te tillen?</h2>
-                <p class="section-intro" style="color: var(--text-color-light);">Neem contact met ons op voor een vrijblijvend gesprek over hoe wij u kunnen helpen excelleren in kwaliteit, veiligheid en compliance.</p>
+                <p class="section-intro" style="color: var(--text-color-light);">Wilt u weten hoe we u kunnen helpen? Neem contact op voor een gratis gesprek over kwaliteit en veiligheid.</p>
                 <div class="text-center">
                     <a href="contact.html" class="cta-button fade-in">NEEM CONTACT OP</a>
                 </div>
