--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     
     <link rel="icon" type="image/svg+xml" href="images/icons/favicon.svg">
     <link rel="stylesheet" href="css/styles.min.css">
+    <link rel="stylesheet" href="css/hover-tiles.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
@@ -124,16 +125,49 @@
                         <i class="fas fa-shield-alt dienst-icon" aria-hidden="true"></i>
                         <h3>Bescherm Uw Bedrijfsgegevens</h3>
                         <p>Wij weten hoe u uw belangrijke bedrijfsgegevens het beste beschermt. We helpen u de juiste beveiliging op te zetten.</p>
+                        <div class="hover-content">
+                            <h4>Uitgebreide Beveiliging</h4>
+                            <ul>
+                                <li>Analyse van uw huidige beveiligingsmaatregelen</li>
+                                <li>Identificatie van kwetsbare bedrijfsgegevens</li>
+                                <li>Implementatie van sterke toegangscontroles</li>
+                                <li>Beveiliging van zowel digitale als fysieke gegevens</li>
+                                <li>Training voor medewerkers over veilig werken</li>
+                                <li>Regelmatige veiligheidscontroles en updates</li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="dienst fade-in">
                         <i class="fas fa-user-shield dienst-icon" aria-hidden="true"></i>
                         <h3>Privacy by Design</h3>
                         <p>We maken privacy een vast deel van uw werk. Zo volgt u altijd de regels op de juiste manier.</p>
+                        <div class="hover-content">
+                            <h4>Privacy Vanaf de Basis</h4>
+                            <ul>
+                                <li>Privacy verwerkt in elk bedrijfsproces</li>
+                                <li>Veilige verwerking van persoonsgegevens</li>
+                                <li>Duidelijke procedures voor gegevensbescherming</li>
+                                <li>Hulp bij het maken van privacyverklaringen</li>
+                                <li>Advies over verwerkersovereenkomsten</li>
+                                <li>Controle op naleving van privacyregels</li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="dienst fade-in">
                         <i class="fas fa-lock dienst-icon" aria-hidden="true"></i>
                         <h3>Continue Bescherming</h3>
                         <p>We blijven uw beveiliging en privacy in de gaten houden. En we maken het steeds beter.</p>
+                        <div class="hover-content">
+                            <h4>Doorlopende Verbetering</h4>
+                            <ul>
+                                <li>Regelmatige controle van beveiligingsmaatregelen</li>
+                                <li>Aanpassing aan nieuwe bedreigingen</li>
+                                <li>Updates bij veranderende wetgeving</li>
+                                <li>Periodieke beveiligingstests</li>
+                                <li>Snelle reactie bij incidenten</li>
+                                <li>Jaarlijkse evaluatie en verbeterplan</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -237,5 +271,6 @@
 
     <script src="js/main.min.js"></script>
     <script src="js/cookie-banner.min.js"></script>
+    <script src="js/expand-content.js"></script>
 </body>
 </html>
