--- a/index.html
+++ b/index.html
@@ -54,7 +54,16 @@
         "sameAs": [
             "https://www.linkedin.com/company/maasiso",
             "https://twitter.com/maasiso"
-        ]
+        ],
+        "logo": "https://www.maasiso.nl/images/logo.png",
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Example Street 123",
+            "addressLocality": "Example City",
+            "postalCode": "1234 AB",
+            "addressCountry": "NL"
+        },
+        "telephone": "+31123456789"
     }
     </script>
 </head>
@@ -80,33 +89,33 @@
     </header>
 
     <main id="main-content">
-        <section id="hero" class="hero" aria-label="Introductie">
+        <article id="hero" class="hero" aria-label="Introductie">
             <div class="container">
-                <h1>Informatiebeveiliging en Privacy | Excellentie door ISO Certificering</h1>
+                <h1 >Informatiebeveiliging en Privacy | Excellentie door ISO Certificering</h1>
                 <p class="lead">Wij helpen uw bedrijf sterker te worden. Met onze begeleiding bij<br>ISO 9001, ISO 27001 en de AVG-regels.</p>
                 <a href="contact.html" class="cta-button">Vraag een Gratis Consult Aan</a>
             </div>
-        </section>
+        </article>
 
-        <section id="diensten" class="section-padding" aria-label="Onze Diensten">
+        <article id="diensten" class="section-padding" aria-label="Onze Diensten">
             <div class="container">
                 <h2 class="section-title fade-in">Onze Diensten</h2>
                 <div class="diensten-grid">
                     <div class="dienst fade-in">
                         <i class="fas fa-check-circle dienst-icon" aria-hidden="true"></i>
-                        <h3>ISO 9001 Kwaliteitsmanagement</h3>
+                        <h3 >ISO 9001 Kwaliteitsmanagement</h3>
                         <p>Maak uw werkwijze beter en uw klanten blijer. Wij helpen u met ISO 9001 en zorgen dat u het certificaat haalt.</p>
                         <a href="iso-9001.html" class="lees-meer">Lees meer over ISO 9001 certificering</a>
                     </div>
                     <div class="dienst fade-in">
                         <i class="fas fa-shield-alt dienst-icon" aria-hidden="true"></i>
-                        <h3>ISO 27001 Informatiebeveiliging</h3>
+                        <h3 >ISO 27001 Informatiebeveiliging</h3>
                         <p>Houd uw bedrijfsgegevens veilig. Met ISO 27001 laten we zien dat u betrouwbaar bent. Wij helpen u hierbij.</p>
                         <a href="iso-27001.html" class="lees-meer">Lees meer over ISO 27001 certificering</a>
                     </div>
                     <div class="dienst fade-in">
                         <i class="fas fa-lock dienst-icon" aria-hidden="true"></i>
-                        <h3>AVG Compliance</h3>
+                        <h3 >AVG Compliance</h3>
                         <p>Wij zorgen dat u aan de privacywet (AVG) voldoet. Met onze kennis van privacy en gegevensbescherming bent u veilig.</p>
                         <a href="avg-compliance.html" class="lees-meer">Lees meer over AVG compliance</a>
                     </div>
@@ -115,15 +124,15 @@
                     <a href="diensten.html" class="secondary-button fade-in">Bekijk al onze diensten</a>
                 </div>
             </div>
-        </section>
+        </article>
 
-        <section id="informatiebeveiliging" class="section-padding" aria-label="Informatiebeveiliging en Privacy">
+        <article id="informatiebeveiliging" class="section-padding" aria-label="Informatiebeveiliging en Privacy">
             <div class="container">
                 <h2 class="section-title fade-in">Informatiebeveiliging en Privacy</h2>
                 <div class="diensten-grid">
                     <div class="dienst fade-in">
                         <i class="fas fa-shield-alt dienst-icon" aria-hidden="true"></i>
-                        <h3>Bescherm Uw Bedrijfsgegevens</h3>
+                        <h3 >Bescherm Uw Bedrijfsgegevens</h3>
                         <p>Wij weten hoe u uw belangrijke bedrijfsgegevens het beste beschermt. We helpen u de juiste beveiliging op te zetten.</p>
                         <div class="hover-content">
                             <h4>Uitgebreide Beveiliging</h4>
@@ -139,7 +148,7 @@
                     </div>
                     <div class="dienst fade-in">
                         <i class="fas fa-user-shield dienst-icon" aria-hidden="true"></i>
-                        <h3>Privacy by Design</h3>
+                        <h3 >Privacy by Design</h3>
                         <p>We maken privacy een vast deel van uw werk. Zo volgt u altijd de regels op de juiste manier.</p>
                         <div class="hover-content">
                             <h4>Privacy Vanaf de Basis</h4>
@@ -155,7 +164,7 @@
                     </div>
                     <div class="dienst fade-in">
                         <i class="fas fa-lock dienst-icon" aria-hidden="true"></i>
-                        <h3>Continue Bescherming</h3>
+                        <h3 >Continue Bescherming</h3>
                         <p>We blijven uw beveiliging en privacy in de gaten houden. En we maken het steeds beter.</p>
                         <div class="hover-content">
                             <h4>Doorlopende Verbetering</h4>
@@ -171,47 +180,47 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </article>
 
-        <section id="waarom-maasiso" class="section-padding" aria-label="Waarom kiezen voor MaasISO">
+        <article id="waarom-maasiso" class="section-padding" aria-label="Waarom kiezen voor MaasISO">
             <div class="container">
                 <h2 class="section-title fade-in">Waarom Kiezen voor MaasISO</h2>
                 <div class="voordelen-grid">
                     <article class="voordeel fade-in">
                         <i class="fas fa-users" aria-hidden="true"></i>
-                        <h3>Expertise</h3>
+                        <h3 >Expertise</h3>
                         <p>Ons team heeft veel ervaring met ISO-regels. We weten precies hoe we u kunnen helpen.</p>
                     </article>
                     <article class="voordeel fade-in">
                         <i class="fas fa-cogs" aria-hidden="true"></i>
-                        <h3>Maatwerk Aanpak</h3>
+                        <h3 >Maatwerk Aanpak</h3>
                         <p>We kijken naar wat uw bedrijf nodig heeft. Dan maken we een plan dat bij u past.</p>
                     </article>
                     <article class="voordeel fade-in">
                         <i class="fas fa-chart-line" aria-hidden="true"></i>
-                        <h3>Resultaatgericht</h3>
+                        <h3 >Resultaatgericht</h3>
                         <p>We werken aan duidelijke doelen. U ziet meteen wat er beter gaat in uw bedrijf.</p>
                     </article>
                     <article class="voordeel fade-in">
                         <i class="fas fa-tools" aria-hidden="true"></i>
-                        <h3>Praktische Benadering</h3>
+                        <h3 >Praktische Benadering</h3>
                         <p>We maken moeilijke regels makkelijk te begrijpen. Zo kunt u er goed mee werken.</p>
                     </article>
                     <article class="voordeel fade-in">
                         <i class="fas fa-comments" aria-hidden="true"></i>
-                        <h3>Transparantie</h3>
+                        <h3 >Transparantie</h3>
                         <p>We zijn altijd duidelijk over wat we doen. Over de tijd, de kosten en wat u kunt verwachten.</p>
                     </article>
                     <article class="voordeel fade-in">
                         <i class="fas fa-handshake" aria-hidden="true"></i>
-                        <h3>Continue Ondersteuning</h3>
+                        <h3 >Continue Ondersteuning</h3>
                         <p>We helpen u van begin tot eind. Ook nadat u het certificaat heeft, blijven we u steunen.</p>
                     </article>
                 </div>
             </div>
-        </section>
+        </article>
 
-        <section id="cta" class="section-padding" style="background-color: var(--hero-background);" aria-label="Contact Oproep">
+        <article id="cta" class="section-padding" style="background-color: var(--hero-background);" aria-label="Contact Oproep">
             <div class="container text-center">
                 <h2 class="section-title" style="color: var(--text-color-light);">Klaar om uw organisatie naar een hoger niveau te tillen?</h2>
                 <p class="section-intro" style="color: var(--text-color-light);">Wilt u weten hoe we u kunnen helpen? Neem contact op voor een gratis gesprek over kwaliteit en veiligheid.</p>
@@ -219,7 +228,7 @@
                     <a href="contact.html" class="cta-button fade-in">NEEM CONTACT OP</a>
                 </div>
             </div>
-        </section>
+        </article>
     </main>
 
     <footer>
