--- a/algemene-voorwaarden.html
+++ b/algemene-voorwaarden.html
@@ -14,7 +14,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Lees de algemene voorwaarden van MaasISO voor informatie over onze dienstverlening, betalingsvoorwaarden, aansprakelijkheid en andere belangrijke bepalingen voor onze zakelijke relatie.">
     <title>Algemene Voorwaarden - MaasISO</title>
-    <link rel="canonical" href="https://www.maasiso.nl/algemene-voorwaarden.html">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://maasiso.nl/algemene-voorwaarden.html">
+    <meta property="og:title" content="Algemene Voorwaarden - MaasISO">
+    <meta property="og:description" content="Lees de algemene voorwaarden van MaasISO voor informatie over onze dienstverlening, betalingsvoorwaarden, aansprakelijkheid en andere belangrijke bepalingen voor onze zakelijke relatie.">
+    <meta property="og:image" content="https://maasiso.nl/images/og-image.jpg">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://maasiso.nl/algemene-voorwaarden.html">
+    <meta name="twitter:title" content="Algemene Voorwaarden - MaasISO">
+    <meta name="twitter:description" content="Lees de algemene voorwaarden van MaasISO voor informatie over onze dienstverlening, betalingsvoorwaarden, aansprakelijkheid en andere belangrijke bepalingen voor onze zakelijke relatie.">
+    <meta name="twitter:image" content="https://maasiso.nl/images/og-image.jpg">
+
+    <link rel="canonical" href="https://maasiso.nl/algemene-voorwaarden.html">
     <link rel="stylesheet" href="css/styles.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
