--- a/avg-compliance.html
+++ b/avg-compliance.html
@@ -12,7 +12,7 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://www.maasiso.nl/avg-compliance.html">
+    <link rel="canonical" href="https://maasiso.nl/avg-compliance.html">
     <title>AVG Compliance Check | MaasISO</title>
     <meta name="description" content="Zorg voor een effectieve bescherming van persoonsgegevens met een professionele AVG compliance check. Wij helpen u met het waarborgen van uw privacy management.">
 
@@ -23,23 +23,23 @@
       "@graph": [
         {
           "@type": "WebPage",
-          "@id": "https://www.maasiso.nl/avg-compliance.html#webpage",
-          "url": "https://www.maasiso.nl/avg-compliance.html",
+          "@id": "https://maasiso.nl/avg-compliance.html#webpage",
+          "url": "https://maasiso.nl/avg-compliance.html",
           "name": "AVG Compliance Check | MaasISO",
           "description": "Zorg voor een effectieve bescherming van persoonsgegevens met een professionele AVG compliance check. Wij helpen u met het waarborgen van uw privacy management.",
-          "isPartOf": {"@id": "https://www.maasiso.nl/#website"},
-          "breadcrumb": {"@id": "https://www.maasiso.nl/avg-compliance.html#breadcrumb"},
-          "mainEntity": {"@id": "https://www.maasiso.nl/avg-compliance.html#article"}
+          "isPartOf": {"@id": "https://maasiso.nl/#website"},
+          "breadcrumb": {"@id": "https://maasiso.nl/avg-compliance.html#breadcrumb"},
+          "mainEntity": {"@id": "https://maasiso.nl/avg-compliance.html#article"}
         },
         {
           "@type": "BreadcrumbList",
-          "@id": "https://www.maasiso.nl/avg-compliance.html#breadcrumb",
+          "@id": "https://maasiso.nl/avg-compliance.html#breadcrumb",
           "itemListElement": [
             {
               "@type": "ListItem",
               "position": 1,
               "item": {
-                "@id": "https://www.maasiso.nl/",
+                "@id": "https://maasiso.nl/",
                 "name": "Home"
               }
             },
@@ -47,7 +47,7 @@
               "@type": "ListItem",
               "position": 2,
               "item": {
-                "@id": "https://www.maasiso.nl/diensten.html",
+                "@id": "https://maasiso.nl/diensten.html",
                 "name": "Diensten"
               }
             },
@@ -55,7 +55,7 @@
               "@type": "ListItem",
               "position": 3,
               "item": {
-                "@id": "https://www.maasiso.nl/avg-compliance.html",
+                "@id": "https://maasiso.nl/avg-compliance.html",
                 "name": "AVG Compliance"
               }
             }
@@ -63,18 +63,18 @@
         },
         {
           "@type": "Article",
-          "@id": "https://www.maasiso.nl/avg-compliance.html#article",
+          "@id": "https://maasiso.nl/avg-compliance.html#article",
           "headline": "AVG Compliance Check: Versterk Uw Privacy Beleid",
           "description": "Zorg voor een effectieve bescherming van persoonsgegevens met een professionele AVG compliance check.",
-          "author": {"@id": "https://www.maasiso.nl/#organization"},
-          "publisher": {"@id": "https://www.maasiso.nl/#organization"},
-          "mainEntityOfPage": {"@id": "https://www.maasiso.nl/avg-compliance.html#webpage"}
+          "author": {"@id": "https://maasiso.nl/#organization"},
+          "publisher": {"@id": "https://maasiso.nl/#organization"},
+          "mainEntityOfPage": {"@id": "https://maasiso.nl/avg-compliance.html#webpage"}
         },
         {
           "@type": "Service",
-          "@id": "https://www.maasiso.nl/avg-compliance.html#service",
+          "@id": "https://maasiso.nl/avg-compliance.html#service",
           "name": "AVG Compliance Check",
-          "provider": {"@id": "https://www.maasiso.nl/#organization"},
+          "provider": {"@id": "https://maasiso.nl/#organization"},
           "description": "Professionele AVG compliance check en begeleiding voor effectieve bescherming van persoonsgegevens",
           "serviceType": "Privacy Compliance Consulting",
           "areaServed": "Netherlands",
@@ -111,7 +111,7 @@
         },
         {
           "@type": "FAQPage",
-          "@id": "https://www.maasiso.nl/avg-compliance.html#faq",
+          "@id": "https://maasiso.nl/avg-compliance.html#faq",
           "mainEntity": [
             {
               "@type": "Question",
@@ -150,17 +150,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.maasiso.nl/avg-compliance.html">
+    <meta property="og:url" content="https://maasiso.nl/avg-compliance.html">
     <meta property="og:title" content="AVG Compliance Check | MaasISO">
     <meta property="og:description" content="Zorg voor een effectieve bescherming van persoonsgegevens met een professionele AVG compliance check. Wij helpen u met het waarborgen van uw privacy management.">
-    <meta property="og:image" content="https://www.maasiso.nl/images/og-image.jpg">
+    <meta property="og:image" content="https://maasiso.nl/images/og-image.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://www.maasiso.nl/avg-compliance.html">
+    <meta name="twitter:url" content="https://maasiso.nl/avg-compliance.html">
     <meta name="twitter:title" content="AVG Compliance Check | MaasISO">
     <meta name="twitter:description" content="Zorg voor een effectieve bescherming van persoonsgegevens met een professionele AVG compliance check. Wij helpen u met het waarborgen van uw privacy management.">
-    <meta name="twitter:image" content="https://www.maasiso.nl/images/og-image.jpg">
+    <meta name="twitter:image" content="https://maasiso.nl/images/og-image.jpg">
 </head>
 <body>
     <header>
