--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.maasiso.nl/">
+    <meta property="og:url" content="https://maasiso.nl/">
     <meta property="og:title" content="MaasISO - ISO Certificering en Implementatie Diensten">
     <meta property="og:description" content="Versterk uw bedrijf met professionele begeleiding bij ISO 9001, ISO 27001 en AVG-implementatie. Expertise in kwaliteitsmanagement en informatiebeveiliging.">
-    <meta property="og:image" content="https://www.maasiso.nl/images/og-image.jpg">
+    <meta property="og:image" content="https://maasiso.nl/images/og-image.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://www.maasiso.nl/">
+    <meta name="twitter:url" content="https://maasiso.nl/">
     <meta name="twitter:title" content="MaasISO - ISO Certificering en Implementatie Diensten">
     <meta name="twitter:description" content="Versterk uw bedrijf met professionele begeleiding bij ISO 9001, ISO 27001 en AVG-implementatie. Expertise in kwaliteitsmanagement en informatiebeveiliging.">
-    <meta name="twitter:image" content="https://www.maasiso.nl/images/og-image.jpg">
+    <meta name="twitter:image" content="https://maasiso.nl/images/og-image.jpg">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://www.maasiso.nl/">
+    <link rel="canonical" href="https://maasiso.nl/">
     
     <link rel="icon" type="image/svg+xml" href="images/icons/favicon.svg">
     <link rel="stylesheet" href="css/styles.min.css">
@@ -45,7 +45,7 @@
         "@type": "Organization",
         "name": "MaasISO",
         "description": "Professionele ISO certificering en implementatie diensten",
-        "url": "https://www.maasiso.nl",
+        "url": "https://maasiso.nl",
         "contactPoint": {
             "@type": "ContactPoint",
             "email": "info@maasiso.nl",
@@ -55,7 +55,7 @@
             "https://www.linkedin.com/company/maasiso",
             "https://twitter.com/maasiso"
         ],
-        "logo": "https://www.maasiso.nl/images/logo.png",
+        "logo": "https://maasiso.nl/images/logo.png",
         "address": {
             "@type": "PostalAddress",
             "streetAddress": "Example Street 123",
