--- a/iso-9001.html
+++ b/iso-9001.html
@@ -12,7 +12,7 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://www.maasiso.nl/iso-9001.html">
+    <link rel="canonical" href="https://maasiso.nl/iso-9001.html">
     <title>ISO 9001 Certificering | Professionele Begeleiding - MaasISO</title>
     <meta name="description" content="Behaal uw ISO 9001 certificering en verbeter uw bedrijfsprocessen. Professionele begeleiding bij implementatie en het behalen van uw kwaliteitscertificaat. Ontdek de voordelen van ISO 9001.">
     
@@ -23,23 +23,23 @@
       "@graph": [
         {
           "@type": "WebPage",
-          "@id": "https://www.maasiso.nl/iso-9001.html#webpage",
-          "url": "https://www.maasiso.nl/iso-9001.html",
+          "@id": "https://maasiso.nl/iso-9001.html#webpage",
+          "url": "https://maasiso.nl/iso-9001.html",
           "name": "ISO 9001 Certificering | Professionele Begeleiding - MaasISO",
           "description": "Behaal uw ISO 9001 certificering en verbeter uw bedrijfsprocessen. Professionele begeleiding bij implementatie en het behalen van uw kwaliteitscertificaat. Ontdek de voordelen van ISO 9001.",
-          "isPartOf": {"@id": "https://www.maasiso.nl/#website"},
-          "breadcrumb": {"@id": "https://www.maasiso.nl/iso-9001.html#breadcrumb"},
-          "mainEntity": {"@id": "https://www.maasiso.nl/iso-9001.html#article"}
+          "isPartOf": {"@id": "https://maasiso.nl/#website"},
+          "breadcrumb": {"@id": "https://maasiso.nl/iso-9001.html#breadcrumb"},
+          "mainEntity": {"@id": "https://maasiso.nl/iso-9001.html#article"}
         },
         {
           "@type": "BreadcrumbList",
-          "@id": "https://www.maasiso.nl/iso-9001.html#breadcrumb",
+          "@id": "https://maasiso.nl/iso-9001.html#breadcrumb",
           "itemListElement": [
             {
               "@type": "ListItem",
               "position": 1,
               "item": {
-                "@id": "https://www.maasiso.nl/",
+                "@id": "https://maasiso.nl/",
                 "name": "Home"
               }
             },
@@ -47,7 +47,7 @@
               "@type": "ListItem",
               "position": 2,
               "item": {
-                "@id": "https://www.maasiso.nl/diensten.html",
+                "@id": "https://maasiso.nl/diensten.html",
                 "name": "Diensten"
               }
             },
@@ -55,7 +55,7 @@
               "@type": "ListItem",
               "position": 3,
               "item": {
-                "@id": "https://www.maasiso.nl/iso-9001.html",
+                "@id": "https://maasiso.nl/iso-9001.html",
                 "name": "ISO 9001 Certificering"
               }
             }
@@ -63,18 +63,18 @@
         },
         {
           "@type": "Article",
-          "@id": "https://www.maasiso.nl/iso-9001.html#article",
+          "@id": "https://maasiso.nl/iso-9001.html#article",
           "headline": "ISO 9001 Certificering Voor Uw Organisatie",
           "description": "Professionele begeleiding bij het behalen van uw ISO 9001 certificering",
-          "author": {"@id": "https://www.maasiso.nl/#organization"},
-          "publisher": {"@id": "https://www.maasiso.nl/#organization"},
-          "mainEntityOfPage": {"@id": "https://www.maasiso.nl/iso-9001.html#webpage"}
+          "author": {"@id": "https://maasiso.nl/#organization"},
+          "publisher": {"@id": "https://maasiso.nl/#organization"},
+          "mainEntityOfPage": {"@id": "https://maasiso.nl/iso-9001.html#webpage"}
         },
         {
           "@type": "Service",
-          "@id": "https://www.maasiso.nl/iso-9001.html#service",
+          "@id": "https://maasiso.nl/iso-9001.html#service",
           "name": "ISO 9001 Implementatie en Begeleiding",
-          "provider": {"@id": "https://www.maasiso.nl/#organization"},
+          "provider": {"@id": "https://maasiso.nl/#organization"},
           "description": "Professionele begeleiding bij de implementatie en het behoud van uw ISO 9001 kwaliteitsmanagementsysteem",
           "serviceType": "ISO Certification Consulting",
           "areaServed": "Netherlands",
@@ -111,7 +111,7 @@
         },
         {
           "@type": "FAQPage",
-          "@id": "https://www.maasiso.nl/iso-9001.html#faq",
+          "@id": "https://maasiso.nl/iso-9001.html#faq",
           "mainEntity": [
             {
               "@type": "Question",
@@ -150,17 +150,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.maasiso.nl/iso-9001.html">
+    <meta property="og:url" content="https://maasiso.nl/iso-9001.html">
     <meta property="og:title" content="ISO 9001 Certificering | Professionele Begeleiding - MaasISO">
     <meta property="og:description" content="Behaal uw ISO 9001 certificering en verbeter uw bedrijfsprocessen. Professionele begeleiding bij implementatie en het behalen van uw kwaliteitscertificaat. Ontdek de voordelen van ISO 9001.">
-    <meta property="og:image" content="https://www.maasiso.nl/images/og-image.jpg">
+    <meta property="og:image" content="https://maasiso.nl/images/og-image.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://www.maasiso.nl/iso-9001.html">
+    <meta name="twitter:url" content="https://maasiso.nl/iso-9001.html">
     <meta name="twitter:title" content="ISO 9001 Certificering | Professionele Begeleiding - MaasISO">
     <meta name="twitter:description" content="Behaal uw ISO 9001 certificering en verbeter uw bedrijfsprocessen. Professionele begeleiding bij implementatie en het behalen van uw kwaliteitscertificaat. Ontdek de voordelen van ISO 9001.">
-    <meta name="twitter:image" content="https://www.maasiso.nl/images/og-image.jpg">
+    <meta name="twitter:image" content="https://maasiso.nl/images/og-image.jpg">
 </head>
 <body>
     <header>
