--- a/privacyverklaring.html
+++ b/privacyverklaring.html
@@ -14,7 +14,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Lees ons privacybeleid voor informatie over hoe MaasISO uw persoonsgegevens verzamelt, gebruikt en beschermt, en welke rechten u heeft met betrekking tot uw gegevens.">
     <title>Privacybeleid - MaasISO</title>
-    <link rel="canonical" href="https://www.maasiso.nl/privacyverklaring.html">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://maasiso.nl/privacyverklaring.html">
+    <meta property="og:title" content="Privacybeleid - MaasISO">
+    <meta property="og:description" content="Lees ons privacybeleid voor informatie over hoe MaasISO uw persoonsgegevens verzamelt, gebruikt en beschermt, en welke rechten u heeft met betrekking tot uw gegevens.">
+    <meta property="og:image" content="https://maasiso.nl/images/og-image.jpg">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://maasiso.nl/privacyverklaring.html">
+    <meta name="twitter:title" content="Privacybeleid - MaasISO">
+    <meta name="twitter:description" content="Lees ons privacybeleid voor informatie over hoe MaasISO uw persoonsgegevens verzamelt, gebruikt en beschermt, en welke rechten u heeft met betrekking tot uw gegevens.">
+    <meta name="twitter:image" content="https://maasiso.nl/images/og-image.jpg">
+
+    <link rel="canonical" href="https://maasiso.nl/privacyverklaring.html">
     <link rel="icon" type="image/svg+xml" href="images/icons/favicon.svg">
     <link rel="stylesheet" href="css/styles.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
@@ -73,7 +88,7 @@
                     <h2>2. Contactgegevens</h2>
                     <address>
                         MaasISO B.V.<br>
-                        Website: www.maasiso.nl<br>
+                        Website: maasiso.nl<br>
                         E-mail: privacy@maasiso.nl<br>
                     </address>
                 </section>
