--- a/cookiebeleid.html
+++ b/cookiebeleid.html
@@ -14,7 +14,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bekijk ons cookiebeleid voor informatie over hoe MaasISO cookies gebruikt, welke soorten cookies we plaatsen en hoe u uw cookie-instellingen kunt beheren of aanpassen.">
     <title>Cookiebeleid - MaasISO</title>
-    <link rel="canonical" href="https://www.maasiso.nl/cookiebeleid.html">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://maasiso.nl/cookiebeleid.html">
+    <meta property="og:title" content="Cookiebeleid - MaasISO">
+    <meta property="og:description" content="Bekijk ons cookiebeleid voor informatie over hoe MaasISO cookies gebruikt, welke soorten cookies we plaatsen en hoe u uw cookie-instellingen kunt beheren of aanpassen.">
+    <meta property="og:image" content="https://maasiso.nl/images/og-image.jpg">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://maasiso.nl/cookiebeleid.html">
+    <meta name="twitter:title" content="Cookiebeleid - MaasISO">
+    <meta name="twitter:description" content="Bekijk ons cookiebeleid voor informatie over hoe MaasISO cookies gebruikt, welke soorten cookies we plaatsen en hoe u uw cookie-instellingen kunt beheren of aanpassen.">
+    <meta name="twitter:image" content="https://maasiso.nl/images/og-image.jpg">
+
+    <link rel="canonical" href="https://maasiso.nl/cookiebeleid.html">
     <link rel="icon" type="image/svg+xml" href="images/icons/favicon.svg">
     <link rel="stylesheet" href="css/styles.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
