--- a/iso-27001.html
+++ b/iso-27001.html
@@ -13,8 +13,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ISO 27001 Informatiebeveiliging - MaasISO</title>
-    <link rel="canonical" href="https://www.maasiso.nl/iso-27001.html">
+    <link rel="canonical" href="https://maasiso.nl/iso-27001.html">
     <meta name="description" content="Bescherm uw bedrijfsinformatie en versterk uw cybersecurity met onze ISO 27001 implementatie en certificeringsbegeleiding. Ontdek de voordelen van informatiebeveiliging.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://maasiso.nl/iso-27001.html">
+    <meta property="og:title" content="ISO 27001 Informatiebeveiliging - MaasISO">
+    <meta property="og:description" content="Bescherm uw bedrijfsinformatie en versterk uw cybersecurity met onze ISO 27001 implementatie en certificeringsbegeleiding. Ontdek de voordelen van informatiebeveiliging.">
+    <meta property="og:image" content="https://maasiso.nl/images/og-image.jpg">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://maasiso.nl/iso-27001.html">
+    <meta name="twitter:title" content="ISO 27001 Informatiebeveiliging - MaasISO">
+    <meta name="twitter:description" content="Bescherm uw bedrijfsinformatie en versterk uw cybersecurity met onze ISO 27001 implementatie en certificeringsbegeleiding. Ontdek de voordelen van informatiebeveiliging.">
+    <meta name="twitter:image" content="https://maasiso.nl/images/og-image.jpg">
 
     <!-- Schema.org markup -->
     <script type="application/ld+json">
@@ -23,23 +37,23 @@
       "@graph": [
         {
           "@type": "WebPage",
-          "@id": "https://www.maasiso.nl/iso-27001.html#webpage",
-          "url": "https://www.maasiso.nl/iso-27001.html",
+          "@id": "https://maasiso.nl/iso-27001.html#webpage",
+          "url": "https://maasiso.nl/iso-27001.html",
           "name": "ISO 27001 Informatiebeveiliging - MaasISO",
           "description": "Bescherm uw bedrijfsinformatie en versterk uw cybersecurity met onze ISO 27001 implementatie en certificeringsbegeleiding. Ontdek de voordelen van informatiebeveiliging.",
-          "isPartOf": {"@id": "https://www.maasiso.nl/#website"},
-          "breadcrumb": {"@id": "https://www.maasiso.nl/iso-27001.html#breadcrumb"},
-          "mainEntity": {"@id": "https://www.maasiso.nl/iso-27001.html#article"}
+          "isPartOf": {"@id": "https://maasiso.nl/#website"},
+          "breadcrumb": {"@id": "https://maasiso.nl/iso-27001.html#breadcrumb"},
+          "mainEntity": {"@id": "https://maasiso.nl/iso-27001.html#article"}
         },
         {
           "@type": "BreadcrumbList",
-          "@id": "https://www.maasiso.nl/iso-27001.html#breadcrumb",
+          "@id": "https://maasiso.nl/iso-27001.html#breadcrumb",
           "itemListElement": [
             {
               "@type": "ListItem",
               "position": 1,
               "item": {
-                "@id": "https://www.maasiso.nl/",
+                "@id": "https://maasiso.nl/",
                 "name": "Home"
               }
             },
@@ -47,7 +61,7 @@
               "@type": "ListItem",
               "position": 2,
               "item": {
-                "@id": "https://www.maasiso.nl/diensten.html",
+                "@id": "https://maasiso.nl/diensten.html",
                 "name": "Diensten"
               }
             },
@@ -55,7 +69,7 @@
               "@type": "ListItem",
               "position": 3,
               "item": {
-                "@id": "https://www.maasiso.nl/iso-27001.html",
+                "@id": "https://maasiso.nl/iso-27001.html",
                 "name": "ISO 27001 Certificering"
               }
             }
@@ -63,18 +77,18 @@
         },
         {
           "@type": "Article",
-          "@id": "https://www.maasiso.nl/iso-27001.html#article",
+          "@id": "https://maasiso.nl/iso-27001.html#article",
           "headline": "ISO 27001 Informatiebeveiliging",
           "description": "Bescherm uw bedrijfsinformatie, versterk uw cybersecurity en bouw vertrouwen op met ISO 27001 certificering",
-          "author": {"@id": "https://www.maasiso.nl/#organization"},
-          "publisher": {"@id": "https://www.maasiso.nl/#organization"},
-          "mainEntityOfPage": {"@id": "https://www.maasiso.nl/iso-27001.html#webpage"}
+          "author": {"@id": "https://maasiso.nl/#organization"},
+          "publisher": {"@id": "https://maasiso.nl/#organization"},
+          "mainEntityOfPage": {"@id": "https://maasiso.nl/iso-27001.html#webpage"}
         },
         {
           "@type": "Service",
-          "@id": "https://www.maasiso.nl/iso-27001.html#service",
+          "@id": "https://maasiso.nl/iso-27001.html#service",
           "name": "ISO 27001 Certificeringsbegeleiding",
-          "provider": {"@id": "https://www.maasiso.nl/#organization"},
+          "provider": {"@id": "https://maasiso.nl/#organization"},
           "description": "Professionele begeleiding bij het behalen en behouden van uw ISO 27001 certificering",
           "serviceType": "Information Security Consulting",
           "areaServed": "Netherlands",
@@ -111,7 +125,7 @@
         },
         {
           "@type": "HowTo",
-          "@id": "https://www.maasiso.nl/iso-27001.html#process",
+          "@id": "https://maasiso.nl/iso-27001.html#process",
           "name": "Het ISO 27001 Certificeringsproces",
           "description": "Stapsgewijze aanpak voor het behalen van ISO 27001 certificering",
           "step": [
