--- a/admin/index.html
+++ b/admin/index.html
@@ -6,6 +6,74 @@
     <title>MaasISO Content Management</title>
     <!-- Include Decap CMS -->
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+    <script>
+      // Configure CMS to use config.yml from admin directory
+      window.CMS_MANUAL_INIT = true;
+      window.addEventListener('load', function() {
+        CMS.init({
+          config: {
+            load_config_file: false,
+            backend: {
+              name: "github",
+              repo: "jackdamnielzz/maasisovm",
+              branch: "master"
+            },
+            media_folder: "static/images",
+            public_folder: "/images",
+            collections: [
+              {
+                name: "pages",
+                label: "Pagina's",
+                folder: "content/pages",
+                create: true,
+                slug: "{{slug}}",
+                fields: [
+                  {label: "Titel", name: "title", widget: "string"},
+                  {label: "SEO Beschrijving", name: "description", widget: "text"},
+                  {label: "Content", name: "body", widget: "markdown"},
+                  {label: "Publicatie Datum", name: "date", widget: "datetime"},
+                  {label: "Laatst Bijgewerkt", name: "lastmod", widget: "datetime"},
+                  {label: "Featured Image", name: "image", widget: "image", required: false}
+                ]
+              },
+              {
+                name: "diensten",
+                label: "Diensten",
+                folder: "content/services",
+                create: true,
+                slug: "{{slug}}",
+                fields: [
+                  {label: "Titel", name: "title", widget: "string"},
+                  {label: "SEO Beschrijving", name: "description", widget: "text"},
+                  {label: "Content", name: "body", widget: "markdown"},
+                  {label: "Icon", name: "icon", widget: "image", required: true},
+                  {label: "Volgorde", name: "weight", widget: "number", default: 1},
+                  {label: "Featured", name: "featured", widget: "boolean", default: false}
+                ]
+              },
+              {
+                name: "blog",
+                label: "Blog",
+                folder: "content/blog",
+                create: true,
+                slug: "{{year}}-{{month}}-{{day}}-{{slug}}",
+                fields: [
+                  {label: "Titel", name: "title", widget: "string"},
+                  {label: "SEO Beschrijving", name: "description", widget: "text"},
+                  {label: "Content", name: "body", widget: "markdown"},
+                  {label: "Publicatie Datum", name: "date", widget: "datetime"},
+                  {label: "Featured Image", name: "image", widget: "image", required: true},
+                  {label: "Categorieën", name: "categories", widget: "list"},
+                  {label: "Tags", name: "tags", widget: "list"},
+                  {label: "Auteur", name: "author", widget: "string"},
+                  {label: "Draft", name: "draft", widget: "boolean", default: true}
+                ]
+              }
+            ]
+          }
+        });
+      });
+    </script>
     <style>
       /* Custom styling voor de admin interface */
       :root {
