fix: Update CMS initialization in admin interface
- Fix JavaScript syntax errors
- Improve script loading order
- Add proper event listener structure

--- a/admin/index.html
+++ b/admin/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MaasISO Content Management</title>
     <!-- Include Decap CMS -->
-    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js" defer></script>
     <script>
-      // Configure CMS to use config.yml from admin directory
-      window.CMS_MANUAL_INIT = true;
-      window.addEventListener('load', function() {
+      // Initialize the CMS after the script has loaded
+      document.addEventListener('DOMContentLoaded', function() {
+        // Configure CMS to use config.yml from admin directory
+        window.CMS_MANUAL_INIT = true;
         CMS.init({
           config: {
             load_config_file: false,
