--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     <link rel="stylesheet" href="css/hover-tiles.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    
+    <!-- Netlify Identity Widget -->
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
     <!-- Schema.org markup -->
     <script type="application/ld+json">
@@ -281,5 +284,18 @@
     <script src="js/main.min.js"></script>
     <script src="js/cookie-banner.min.js"></script>
     <script src="js/expand-content.js"></script>
+    
+    <!-- Netlify Identity Redirect -->
+    <script>
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", user => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => {
+              document.location.href = "/admin/";
+            });
+          }
+        });
+      }
+    </script>
 </body>
 </html>
